--- a/open-core-model/pom.xml
+++ b/open-core-model/pom.xml
@@ -5,12 +5,36 @@
     <parent>
         <artifactId>open-core-parent</artifactId>
         <groupId>com.sm</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.sm</groupId>
     <artifactId>open-core-model</artifactId>
+    <packaging>jar</packaging>
+    <version>${open.core.model.version}</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.sm</groupId>
+            <artifactId>open-care-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sm</groupId>
+            <artifactId>open-core-common</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sm</groupId>
+            <artifactId>open-core-facade</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+
+    </build>
 
 </project>
