--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,9 @@
     <groupId>com.sm</groupId>
     <artifactId>open-core-parent</artifactId>
     <packaging>pom</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
+
+
     <modules>
         <module>open-core-common</module>
         <module>open-core-dal</module>
@@ -18,5 +20,323 @@
         <module>open-core-service-mb</module>
     </modules>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.6</java.version>
+
+        <!-- 项目里的jar版本管理 -->
+        <open.care.core.version>1.0.0</open.care.core.version>
+        <open.core.common.version>1.0.0</open.core.common.version>
+        <open.core.model.version>1.0.0</open.core.model.version>
+        <open.core.dal.version>1.0.0</open.core.dal.version>
+        <open.core.service.version>1.0.0</open.core.service.version>
+        <open.core.integration.version>1.0.0</open.core.integration.version>
+        <open.core.facade.version>1.0.0</open.core.facade.version>
+        <open.core.service.version>1.0.0</open.core.service.version>
+        <open.core.service.mb.version>1.0.0</open.core.service.mb.version>
+
+        <!-- 第三方jar的版本管理 -->
+        <spring.version>4.0.0.RELEASE</spring.version>
+        <slite.dependencies.version>1.0.2</slite.dependencies.version>
+        <servlet.api.version>3.1.0</servlet.api.version>
+        <commons.lang.version>2.6</commons.lang.version>
+        <commons.lang3.version>3.3.2</commons.lang3.version>
+        <httpclient.version>4.3.6</httpclient.version>
+        <druid-version>1.0.9</druid-version>
+        <mybatis.version>3.2.8</mybatis.version>
+        <mybatis.spring.version>1.2.2</mybatis.spring.version>
+        <mysql.version>5.1.21</mysql.version>
+        <slf4j.version>1.7.21</slf4j.version>
+        <log4j2.version>2.3</log4j2.version>
+        <jc-over-slfj.version>1.5.8</jc-over-slfj.version>
+        <commons-logging.version>1.1.3</commons-logging.version>
+        <aspectjweaver.version>1.8.9</aspectjweaver.version>
+        <commons-httpclient-version>3.1</commons-httpclient-version>
+        <liquibase.version>3.5.1</liquibase.version>
+        <fastjson.version>1.2.7.sec01</fastjson.version>
+        <zookeeper.version>3.4.6</zookeeper.version>
+        <zkclient.version>0.1</zkclient.version>
+        <dubbo.version>2.5.3</dubbo.version>
+        <redis.clients.version>2.9.0</redis.clients.version>
+        <junit.version>4.12</junit.version>
+    </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>nexus-releases</id>
+            <name>Release Repository</name>
+            <url>http://121.43.186.82:8081/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>nexus-snapshots</id>
+            <name>Snapshot Repository</name>
+            <url>http://121.43.186.82:8081/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+    <dependencyManagement>
+        <dependencies>
+            <!-- 项目里的jar -->
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-care-core</artifactId>
+                <version>${open.care.core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-common</artifactId>
+                <version>${open.core.common.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-model</artifactId>
+                <version>${open.core.model.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-dal</artifactId>
+                <version>${open.core.dal.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-integration</artifactId>
+                <version>${open.core.integration.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-facade</artifactId>
+                <version>${open.core.facade.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-service</artifactId>
+                <version>${open.core.service.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-service-mb</artifactId>
+                <version>${open.core.service.mb.version}</version>
+            </dependency>
+
+            <!-- 以下为第三方jar -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>fastjson</artifactId>
+                <version>${fastjson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.servlet</groupId>
+                <artifactId>javax.servlet-api</artifactId>
+                <version>${servlet.api.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons.lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commons.lang3.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>${httpclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-httpclient</groupId>
+                <artifactId>commons-httpclient</artifactId>
+                <version>${commons-httpclient-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid-version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis.spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-beans</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-log4j12</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl104-over-slf4j</artifactId>
+                <version>${jc-over-slfj.version}</version>
+            </dependency>
+            <!--log4j2日志配置 start-->
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+            <!--log4j2日志配置 end-->
+
+            <dependency>
+                <groupId>commons-logging</groupId>
+                <artifactId>commons-logging</artifactId>
+                <version>${commons-logging.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.aspectj</groupId>
+                <artifactId>aspectjweaver</artifactId>
+                <version>${aspectjweaver.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-orm</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-aop</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-web</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+
+            <!-- zookeeper + dubbo -->
+            <dependency>
+                <groupId>org.apache.zookeeper</groupId>
+                <artifactId>zookeeper</artifactId>
+                <version>${zookeeper.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.sgroschupf</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>${zkclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+            </dependency>
+
+            <!-- redis -->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${redis.clients.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.version}</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>oschina</id>
+            <name>local private nexus</name>
+            <url>http://maven.oschina.net/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>oschina</id>
+            <name>local private nexus</name>
+            <url>http://maven.oschina.net/content/groups/public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </pluginRepository>
+    </pluginRepositories>
 
 </project>
