--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <open.core.service.mb.version>1.0.0</open.core.service.mb.version>
 
         <!-- 第三方jar的版本管理 -->
-        <spring.version>4.3.7.RELEASE</spring.version>
+        <spring.version>4.2.8.RELEASE</spring.version>
         <slite.dependencies.version>1.0.2</slite.dependencies.version>
         <servlet.api.version>3.1.0</servlet.api.version>
         <commons.lang.version>2.6</commons.lang.version>
@@ -272,6 +272,12 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>spring</artifactId>
+                        <groupId>org.springframework</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- redis -->
