--- a/open-core-service-mb/pom.xml
+++ b/open-core-service-mb/pom.xml
@@ -62,10 +62,10 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.aspectj</groupId>
