--- a/open-core-service/pom.xml
+++ b/open-core-service/pom.xml
@@ -120,10 +120,14 @@
                     <groupId>org.slf4j</groupId>
                     <artifactId>slf4j-log4j12</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.github.sgroschupf</groupId>
+            <groupId>com.101tec</groupId>
             <artifactId>zkclient</artifactId>
         </dependency>
 
@@ -200,57 +204,43 @@
     -->
     <!-- 打分散的lib包及可jar包外配置文件修改的配置end -->
 
-
     <build>
-        <filters>
-            <filter>src/main/resources/deploy/config.properties.${env}</filter>
-        </filters>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.3.3</version>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <outputDirectory>${project.build.directory}/${project.artifactId}</outputDirectory>
+                    <archive>
+                        <addMavenDescriptor>false</addMavenDescriptor>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>com.sm.open.core.service.OpenCoreRpcServer</mainClass>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                        </manifest>
+                        <manifestEntries>
+                            <Class-Path>./conf/</Class-Path>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4.1</version>
                 <executions>
                     <execution>
+                        <id>make-zip</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>single</goal>
                         </goals>
                         <configuration>
-                            <outputFile>../target/opencore.jar</outputFile>
-                            <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.sm.open.core.service.OpenCoreRpcServer</mainClass>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/spring.handlers</resource>
-                                </transformer>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/spring.schemas</resource>
-                                </transformer>
-                            </transformers>
-                            <filters>
-                                <filter>
-                                    <artifact>*:*</artifact>
-                                    <excludes>
-                                        <exclude>META-INF/*.SF</exclude>
-                                        <exclude>META-INF/*.DSA</exclude>
-                                        <exclude>META-INF/*.RSA</exclude>
-                                    </excludes>
-                                </filter>
-                            </filters>
+                            <descriptors>
+                                <descriptor>src/main/resources/assembly.xml</descriptor>
+                            </descriptors>
                         </configuration>
                     </execution>
                 </executions>
@@ -260,25 +250,105 @@
 
     <profiles>
         <profile>
-            <id>local</id>
-            <properties>
-                <env>local</env>
-            </properties>
+            <id>development</id>
+            <build>
+                <filters>
+                    <filter>profile.dev.properties</filter>
+                </filters>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                    </resource>
+                </resources>
+            </build>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
         </profile>
         <profile>
             <id>test</id>
-            <properties>
-                <env>test</env>
-            </properties>
+            <build>
+                <filters>
+                    <filter>profile.test.properties</filter>
+                </filters>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                        <includes>
+                            <include>**/*.properties</include>
+                            <include>log4j2.xml</include>
+                        </includes>
+                        <targetPath>${project.build.directory}/${project.artifactId}/conf</targetPath>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+                            <exclude>run.sh</exclude>
+                            <exclude>run.bat</exclude>
+                            <exclude>assembly.xml</exclude>
+                        </excludes>
+                        <targetPath>${project.build.directory}/${project.artifactId}/conf</targetPath>
+                    </resource>
+                </resources>
+            </build>
+        </profile>
+        <profile>
+            <id>uat</id>
+            <build>
+                <filters>
+                    <filter>profile.uat.properties</filter>
+                </filters>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                        <includes>
+                            <include>**/*.properties</include>
+                            <include>log4j2.xml</include>
+                        </includes>
+                        <targetPath>${project.build.directory}/${project.artifactId}/conf</targetPath>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+                            <exclude>run.sh</exclude>
+                            <exclude>run.bat</exclude>
+                            <exclude>assembly.xml</exclude>
+                        </excludes>
+                        <targetPath>${project.build.directory}/${project.artifactId}/conf</targetPath>
+                    </resource>
+                </resources>
+            </build>
         </profile>
         <profile>
             <id>prod</id>
-            <properties>
-                <env>prod</env>
-            </properties>
+            <build>
+                <filters>
+                    <filter>profile.prod.properties</filter>
+                </filters>
+                <resources>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <filtering>true</filtering>
+                        <includes>
+                            <include>**/*.properties</include>
+                            <include>log4j2.xml</include>
+                        </includes>
+                        <targetPath>${project.build.directory}/${project.artifactId}/conf</targetPath>
+                    </resource>
+                    <resource>
+                        <directory>src/main/resources</directory>
+                        <excludes>
+                            <exclude>run.sh</exclude>
+                            <exclude>run.bat</exclude>
+                            <exclude>assembly.xml</exclude>
+                        </excludes>
+                        <targetPath>${project.build.directory}/${project.artifactId}/conf</targetPath>
+                    </resource>
+                </resources>
+            </build>
         </profile>
     </profiles>
 
