--- a/open-core-service/profile.dev.properties
+++ b/open-core-service/profile.dev.properties
@@ -1,7 +1,8 @@
 app_name=opencore
 
-log_level=info
-loggingRoot=/home/admin/logs
+log4j2.level=info
+log4j2.sql.level=debug
+log4j2.log.basepath=./logs
 
 jdbc.url=jdbc:mysql://localhost:3306/med?zeroDateTimeBehavior=convertToNull&amp;allowMultiQueries=true
 jdbc.username=root
@@ -9,3 +10,4 @@ jdbc.password=Yangtb0424
 
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.cache.file=/Users/yangtongbin/work/cache/dubbo/dubbo.cache
+
