--- a/open-core-service/src/main/resources/config/opencore-jdbc.properties
+++ b/open-core-service/src/main/resources/config/opencore-jdbc.properties
@@ -16,7 +16,7 @@ druid.minEvictableIdleTimeMillis = 300000
 druid.poolPreparedStatements = true
 druid.maxPoolPreparedStatementPerConnectionSize = 20
 #stat,log4j,config
-druid.filters = stat,log4j
+druid.filters = log4j2,wall
 druid.removeAbandoned = true
 druid.removeAbandonedTimeout = 1800
 druid.logAbandoned = true
