--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,12 @@
         <module>open-core-model</module>
         <module>open-core-service</module>
         <module>open-core-service-mb</module>
+        <module>open-core-service-pf</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.6</java.version>
+        <java.version>1.8</java.version>
 
         <!-- 项目里的jar版本管理 -->
         <open.care.core.version>1.0.0</open.care.core.version>
@@ -34,6 +35,7 @@
         <open.core.facade.version>1.0.0</open.core.facade.version>
         <open.core.service.version>1.0.0</open.core.service.version>
         <open.core.service.mb.version>1.0.0</open.core.service.mb.version>
+        <open.core.service.pf.version>1.0.0</open.core.service.pf.version>
 
         <!-- 第三方jar的版本管理 -->
         <!-- 以下为第三方jar的版本管理 -->
@@ -118,7 +120,7 @@
 
         <zookeeper.version>3.4.6</zookeeper.version>
         <zkclient.version>0.10</zkclient.version>
-        <dubbo.version>2.5.8</dubbo.version>
+        <dubbo.version>2.5.9</dubbo.version>
 
         <velocity.version>1.6.2</velocity.version>
         <velocity.tools.version>2.0</velocity.tools.version>
@@ -198,7 +200,6 @@
         <jgroups.all.version>2.2</jgroups.all.version>
 
         <javax.annotation.api.version>1.2</javax.annotation.api.version>
-        <javaee.version>6.0</javaee.version>
         <taglibs.standard.version>1.1.2</taglibs.standard.version>
         <tomcat.jdbc.version>7.0.42</tomcat.jdbc.version>
         <plexus.compiler.javac.version>1.8.1</plexus.compiler.javac.version>
@@ -259,6 +260,11 @@
                 <groupId>com.sm</groupId>
                 <artifactId>open-core-service-mb</artifactId>
                 <version>${open.core.service.mb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sm</groupId>
+                <artifactId>open-core-service-pf</artifactId>
+                <version>${open.core.service.pf.version}</version>
             </dependency>
 
             <!-- 以下为第三方jar -->
@@ -403,11 +409,6 @@
                 <version>${okhttp3.version}</version>
             </dependency>
 
-            <dependency>
-                <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
-                <version>${slf4j.log4j12.version}</version>
-            </dependency>
             <dependency>
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-api</artifactId>
@@ -970,12 +971,6 @@
             </dependency>
 
             <dependency>
-                <groupId>com.github.pagehelper</groupId>
-                <artifactId>pagehelper</artifactId>
-                <version>${pagehelper.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-jta_1.0.1B_spec</artifactId>
                 <version>${geronimo.jta.version}</version>
@@ -1204,18 +1199,7 @@
                 <version>${javax.annotation.api.version}</version>
                 <scope>provided</scope>
             </dependency>
-            <dependency>
-                <groupId>javax</groupId>
-                <artifactId>javaee-api</artifactId>
-                <version>${javaee.version}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>javax</groupId>
-                <artifactId>javaee-web-api</artifactId>
-                <version>${javaee.version}</version>
-                <scope>provided</scope>
-            </dependency>
+
             <dependency>
                 <groupId>taglibs</groupId>
                 <artifactId>standard</artifactId>
@@ -1241,18 +1225,88 @@
     </dependencyManagement>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-        </plugins>
+        <defaultGoal>package</defaultGoal>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.5.1</version>
+                    <configuration>
+                        <source>${java.version}</source>
+                        <target>${java.version}</target>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <includeEmptyDirectories>true</includeEmptyDirectories>
+                        <archive>
+                            <addMavenDescriptor>false</addMavenDescriptor>
+                        </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.6</version>
+                    <configuration>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                        <includeEmptyDirs>true</includeEmptyDirs>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <archive>
+                            <addMavenDescriptor>false</addMavenDescriptor>
+                        </archive>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>copy</id>
+                            <phase>package</phase>
+                            <configuration>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.4.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-clean-plugin</artifactId>
+                    <version>2.4.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-install-plugin</artifactId>
+                    <version>2.3.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.5</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-archetype-plugin</artifactId>
+                    <version>2.1</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 
     <repositories>
