邮件服务相关

--- a/open-core-service/src/main/resources/config/core-email.properties
+++ b/open-core-service/src/main/resources/config/core-email.properties
@@ -1,7 +1,9 @@
+#\u90AE\u4EF6\u8BBE\u7F6E
+#Fri Sep 21 23:09:26 CST 2018
 core.email.encoding=UTF-8
-core.email.userName=\u5F00\u653E\u7BA1\u7406\u5E73\u53F0
+core.email.userName=
 core.email.host=
-core.email.nickname=
+core.email.nickname=\u5609\u5955\u4E34\u5E8A\u601D\u7EF4\u7EFC\u5408\u7CFB\u7EDF
 core.email.sender=
-core.email.sendSwitch=Y
+core.email.sendSwitch=N
 core.email.password=
