--- a/open-core-service/src/main/resources/config/core-jdbc.properties
+++ b/open-core-service/src/main/resources/config/core-jdbc.properties
@@ -1,5 +1,5 @@
 # jdbc
-driverClass=com.mysql.jdbc.Driver
+driverClass=${jdbc.driver}
 jdbc.url=${jdbc.url}
 jdbc.username=${jdbc.username}
 jdbc.password=${jdbc.password}
