--- a/open-core-service/profile.dev.properties
+++ b/open-core-service/profile.dev.properties
@@ -1,8 +1,8 @@
 app.name=open-core
 
 log4j2.level=info
-log4j2.sql.level=info
-log4j2.log.basePath=./logs
+log4j2.sql.level=debug
+log4j2.log.basePath=./logs/core
 log4j2.immediateFlush=true
 
 jdbc.url=jdbc:mysql://localhost:3306/med?zeroDateTimeBehavior=convertToNull&amp;allowMultiQueries=true
