--- a/open-core-service/profile.prod.properties
+++ b/open-core-service/profile.prod.properties
@@ -1,14 +1,15 @@
-app.name=openCore
+app.name=open-core
 
 log4j2.level=info
-log4j2.sql.level=debug
-log4j2.log.basePath=./logs
+log4j2.sql.level=info
+log4j2.log.basePath=/usr/local/logs/core
+log4j2.immediateFlush=true
 
 jdbc.url=jdbc:mysql://localhost:3306/med?zeroDateTimeBehavior=convertToNull&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=Yangtb0424
+jdbc.password=Jy1024@126
 
 dubbo.registry.address=zookeeper://127.0.0.1:2181
-dubbo.cache.file=/Users/yangtongbin/work/cache/dubbo/dubbo.cache
+dubbo.cache.file=/usr/local/jy-cache/dubbo/dubbo.cache
 
 reset.password.email.switch=N
