--- a/open-core-service/profile.dev.properties
+++ b/open-core-service/profile.dev.properties
@@ -5,9 +5,9 @@ log4j2.sql.level=debug
 log4j2.log.basePath=./logs/core
 log4j2.immediateFlush=true
 
-jdbc.url=jdbc:mysql://localhost:3306/med?zeroDateTimeBehavior=convertToNull&amp;allowMultiQueries=true
+jdbc.url=jdbc:mysql://47.100.246.123:3306/med?zeroDateTimeBehavior=convertToNull&amp;allowMultiQueries=true
 jdbc.username=root
-jdbc.password=Yangtb0424
+jdbc.password=Jy1024@126
 
 dubbo.registry.address=zookeeper://127.0.0.1:2181
 dubbo.cache.file=/Users/yangtongbin/work/cache/dubbo/dubbo.cache
